# fastapi-project

./: Dockerfile  docker-compose.yml  pyproject.toml  start.sh
app/: .env.template  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_04_2046-7c446b13278c_initial_user_and_accesstoken_models.py  2025_03_15_2124-2ce450edccd0_add_username_role_fields_for_user_model.py  2025_03_15_2333-4cb060e32d05_create_product_model.py  2025_03_24_0024-0bd919c7673c_create_order_orderitem_models.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  auth.py  base_router.py  cart.py  orders.py  products.py  users.py
app/authentication/: __init__.py  backend.py  dependencies.py  fastapi_users_object.py  strategy.py  transport.py  user_manager.py
app/core/: __init__.py  config.py  db_helper.py  types.py
app/crud/: __init__.py  base.py  order.py  product.py
app/models/: __init__.py  access_token.py  base.py  order.py  order_item.py  product.py  user.py
app/redis_cache/: __init__.py  cart_redis.py  redis_connector.py
app/schemas/: __init__.py  cart.py  filters.py  order.py  order_item.py  product.py  user.py
app/service/: __init__.py  base.py  order.py  product.py
app/utils/: __init__.py  enums.py
tests/: conftest.py
tests/api_clients/: __init__.py  async_http_client.py  auth_client.py
tests/data/: __init__.py  users.py
tests/functional_tests/: test_auth.py
tests/utils/: __init__.py  create_verify_token.py
